# embeddings_rag

./: 01_embeddings_rag.ipynb  LICENSE  main.py  pyproject.toml
etl/: 01_converting_products_into_embeddings.ipynb
legacy/: 01_embeddings_rag.ipynb
